--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arte com pixels</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,11 +12,12 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="color-palette">
-        <div class="color" id="black"></div>
-        <div class="color" id="color2"></div>
-        <div class="color" id="color3"></div>
-        <div class="color" id="color4"></div>
+        <div class="color selected" id="black"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
     </div>
+    <button id="button-random-color">Cores aleatórias</button>
     <script src="script.js"></script>
 </body>
 </html>
