--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="color-palette">
-        <div class="color selected" id="black"></div>
+        <div class="color" id="black"></div>
         <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
     </div>
+
     <button id="button-random-color">Cores aleatórias</button>
+
+    <div id="pixel-board"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
