--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <button id="button-random-color">Cores aleatórias</button>
-
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board"></div>
 
     <script src="script.js"></script>
